log.txt

/home/insa/turtlebot3_ws/src/turtlebot3/turtlebot3_node/src/sensors/AdcReader.cpp:18:1: error: no declaration matches ‘AdcReader::AdcReader(std::string, int, int)’
   18 | AdcReader::AdcReader(std::string i2c_dev, int addr_7b, int enable_gpio)
      | ^~~~~~~~~
In file included from /home/insa/turtlebot3_ws/src/turtlebot3/turtlebot3_node/src/sensors/AdcReader.cpp:1:
/home/insa/turtlebot3_ws/src/turtlebot3/turtlebot3_node/include/turtlebot3_node/sensors/AdcReader.hpp:31:3: note: candidates are: ‘AdcReader::AdcReader(const AdcReader&)’
   31 |   AdcReader(const AdcReader&) = delete;
      |   ^~~~~~~~~
/home/insa/turtlebot3_ws/src/turtlebot3/turtlebot3_node/include/turtlebot3_node/sensors/AdcReader.hpp:23:12: note:                 ‘AdcReader::AdcReader(int, std::string, int, int)’
   23 |   explicit AdcReader(
      |            ^~~~~~~~~
/home/insa/turtlebot3_ws/src/turtlebot3/turtlebot3_node/include/turtlebot3_node/sensors/AdcReader.hpp:6:7: note: ‘class AdcReader’ defined here
    6 | class AdcReader
      |       ^~~~~~~~~
gmake[2]: *** [CMakeFiles/turtlebot3_node_lib.dir/build.make:118: CMakeFiles/turtlebot3_node_lib.dir/src/sensors/AdcReader.cpp.o] Error 1

